STB-2931 - Added functionality to handle Firm User Manager Role